developing data sorting

--- a/data processing/testing/make json data.ipynb
+++ b/data processing/testing/make json data.ipynb
@@ -5,17 +5,11 @@
    "id": "f7aa23f5-dbe1-44ef-83c4-65eb7ea48022",
    "metadata": {},
    "source": [
-    "target format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f97b0a0d-44f7-4ba3-a968-091045af9b08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install pandas"
+    "target format is JSON\n",
+    "{\n",
+    "\"demoset\":{\"bottle\":\"pullo\",\"station\":\"asema\",\"shelf\":\"hylly\",\"bar\":\"baari\"},\n",
+    "\"demoset2\":{\"bottle2\":\"pullo2\",\"station2\":\"asema2\",\"shelf2\":\"hylly2\",\"bar2\":\"baari2\"}\n",
+    " }"
    ]
   },
   {
@@ -472,366 +466,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "id": "8d8ed3f4-2ca0-4dc2-ad27-f4c626f45cb5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>English</th>\n",
-       "      <th>Finnish</th>\n",
-       "      <th>index</th>\n",
-       "      <th>Summary</th>\n",
-       "      <th>word</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>freq</th>\n",
-       "      <th>forms</th>\n",
-       "      <th>important</th>\n",
-       "      <th>ranking</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3070</th>\n",
-       "      <td>rag</td>\n",
-       "      <td>rääsy</td>\n",
-       "      <td>5036</td>\n",
-       "      <td>rag|n</td>\n",
-       "      <td>rag</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>rag, rags</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3069</th>\n",
-       "      <td>rag</td>\n",
-       "      <td>räsy</td>\n",
-       "      <td>5036</td>\n",
-       "      <td>rag|n</td>\n",
-       "      <td>rag</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>rag, rags</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2939</th>\n",
-       "      <td>registration</td>\n",
-       "      <td>rekisteröinti</td>\n",
-       "      <td>5037</td>\n",
-       "      <td>registration|n</td>\n",
-       "      <td>registration</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>registration, registrations</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3055</th>\n",
-       "      <td>rhythm</td>\n",
-       "      <td>rytmi</td>\n",
-       "      <td>5038</td>\n",
-       "      <td>rhythm|n</td>\n",
-       "      <td>rhythm</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>rhythm, rhythms</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5038</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2676</th>\n",
-       "      <td>rhythm</td>\n",
-       "      <td>poljento</td>\n",
-       "      <td>5038</td>\n",
-       "      <td>rhythm|n</td>\n",
-       "      <td>rhythm</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>rhythm, rhythms</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5038</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1976</th>\n",
-       "      <td>screwdriver</td>\n",
-       "      <td>meisseli</td>\n",
-       "      <td>5039</td>\n",
-       "      <td>screwdriver|n</td>\n",
-       "      <td>screwdriver</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>screwdriver, screwdrivers</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3051</th>\n",
-       "      <td>screwdriver</td>\n",
-       "      <td>ruuvitaltta</td>\n",
-       "      <td>5039</td>\n",
-       "      <td>screwdriver|n</td>\n",
-       "      <td>screwdriver</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>screwdriver, screwdrivers</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3959</th>\n",
-       "      <td>selection</td>\n",
-       "      <td>valinta</td>\n",
-       "      <td>5041</td>\n",
-       "      <td>selection|n</td>\n",
-       "      <td>selection</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>selection, selections</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3157</th>\n",
-       "      <td>selection</td>\n",
-       "      <td>selektio</td>\n",
-       "      <td>5041</td>\n",
-       "      <td>selection|n</td>\n",
-       "      <td>selection</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>selection, selections</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3962</th>\n",
-       "      <td>selection</td>\n",
-       "      <td>valitseminen</td>\n",
-       "      <td>5041</td>\n",
-       "      <td>selection|n</td>\n",
-       "      <td>selection</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>selection, selections</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1610</th>\n",
-       "      <td>shell</td>\n",
-       "      <td>laidoitus</td>\n",
-       "      <td>5042</td>\n",
-       "      <td>shell|n</td>\n",
-       "      <td>shell</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>shell, shells</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5042</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2893</th>\n",
-       "      <td>stripe</td>\n",
-       "      <td>raita</td>\n",
-       "      <td>5046</td>\n",
-       "      <td>stripe|n</td>\n",
-       "      <td>stripe</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>stripe, stripes</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>975</th>\n",
-       "      <td>stripe</td>\n",
-       "      <td>juomu</td>\n",
-       "      <td>5046</td>\n",
-       "      <td>stripe|n</td>\n",
-       "      <td>stripe</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>stripe, stripes</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>sunrise</td>\n",
-       "      <td>auringonnousu</td>\n",
-       "      <td>5050</td>\n",
-       "      <td>sunrise|n</td>\n",
-       "      <td>sunrise</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>sunrise, sunrises</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3782</th>\n",
-       "      <td>toupee</td>\n",
-       "      <td>tupee</td>\n",
-       "      <td>5051</td>\n",
-       "      <td>toupee|n</td>\n",
-       "      <td>toupee</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>toupee, toupees</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>711</th>\n",
-       "      <td>toupee</td>\n",
-       "      <td>hiuslisäke</td>\n",
-       "      <td>5051</td>\n",
-       "      <td>toupee|n</td>\n",
-       "      <td>toupee</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>toupee, toupees</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4055</th>\n",
-       "      <td>vein</td>\n",
-       "      <td>vena</td>\n",
-       "      <td>5056</td>\n",
-       "      <td>vein|n</td>\n",
-       "      <td>vein</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>vein, veins</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1646</th>\n",
-       "      <td>vein</td>\n",
-       "      <td>laskimo</td>\n",
-       "      <td>5056</td>\n",
-       "      <td>vein|n</td>\n",
-       "      <td>vein</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>vein, veins</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>744</th>\n",
-       "      <td>worry</td>\n",
-       "      <td>huoli</td>\n",
-       "      <td>5060</td>\n",
-       "      <td>worry|n</td>\n",
-       "      <td>worry</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>worry, worries</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2078</th>\n",
-       "      <td>memorial</td>\n",
-       "      <td>muistomerkki</td>\n",
-       "      <td>5061</td>\n",
-       "      <td>memorial|n</td>\n",
-       "      <td>memorial</td>\n",
-       "      <td>n</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>memorial, memorials</td>\n",
-       "      <td>bonus</td>\n",
-       "      <td>5061</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           English        Finnish  index         Summary          word POS  \\\n",
-       "3070           rag          rääsy   5036           rag|n           rag   n   \n",
-       "3069           rag           räsy   5036           rag|n           rag   n   \n",
-       "2939  registration  rekisteröinti   5037  registration|n  registration   n   \n",
-       "3055        rhythm          rytmi   5038        rhythm|n        rhythm   n   \n",
-       "2676        rhythm       poljento   5038        rhythm|n        rhythm   n   \n",
-       "1976   screwdriver       meisseli   5039   screwdriver|n   screwdriver   n   \n",
-       "3051   screwdriver    ruuvitaltta   5039   screwdriver|n   screwdriver   n   \n",
-       "3959     selection        valinta   5041     selection|n     selection   n   \n",
-       "3157     selection       selektio   5041     selection|n     selection   n   \n",
-       "3962     selection   valitseminen   5041     selection|n     selection   n   \n",
-       "1610         shell      laidoitus   5042         shell|n         shell   n   \n",
-       "2893        stripe          raita   5046        stripe|n        stripe   n   \n",
-       "975         stripe          juomu   5046        stripe|n        stripe   n   \n",
-       "212        sunrise  auringonnousu   5050       sunrise|n       sunrise   n   \n",
-       "3782        toupee          tupee   5051        toupee|n        toupee   n   \n",
-       "711         toupee     hiuslisäke   5051        toupee|n        toupee   n   \n",
-       "4055          vein           vena   5056          vein|n          vein   n   \n",
-       "1646          vein        laskimo   5056          vein|n          vein   n   \n",
-       "744          worry          huoli   5060         worry|n         worry   n   \n",
-       "2078      memorial   muistomerkki   5061      memorial|n      memorial   n   \n",
-       "\n",
-       "      freq                        forms important  ranking  \n",
-       "3070  32.0                    rag, rags     bonus     5036  \n",
-       "3069  32.0                    rag, rags     bonus     5036  \n",
-       "2939  32.0  registration, registrations     bonus     5037  \n",
-       "3055  32.0              rhythm, rhythms     bonus     5038  \n",
-       "2676  32.0              rhythm, rhythms     bonus     5038  \n",
-       "1976  32.0    screwdriver, screwdrivers     bonus     5039  \n",
-       "3051  32.0    screwdriver, screwdrivers     bonus     5039  \n",
-       "3959  32.0        selection, selections     bonus     5041  \n",
-       "3157  32.0        selection, selections     bonus     5041  \n",
-       "3962  32.0        selection, selections     bonus     5041  \n",
-       "1610  32.0                shell, shells     bonus     5042  \n",
-       "2893  32.0              stripe, stripes     bonus     5046  \n",
-       "975   32.0              stripe, stripes     bonus     5046  \n",
-       "212   32.0            sunrise, sunrises     bonus     5050  \n",
-       "3782  32.0              toupee, toupees     bonus     5051  \n",
-       "711   32.0              toupee, toupees     bonus     5051  \n",
-       "4055  32.0                  vein, veins     bonus     5056  \n",
-       "1646  32.0                  vein, veins     bonus     5056  \n",
-       "744   32.0               worry, worries     bonus     5060  \n",
-       "2078  32.0          memorial, memorials     bonus     5061  "
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "useful.sort_values('ranking', inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "id": "caec3a7d-ece3-4070-b917-f9c599a4cb57",
    "metadata": {},
    "outputs": [],
@@ -841,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "id": "95eaeabd-e963-4156-82c6-59ccb0fb4f0a",
    "metadata": {},
    "outputs": [],
@@ -851,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "56dbdb60-28de-4bd7-9a5e-ad7e9c32011e",
    "metadata": {},
    "outputs": [
@@ -861,7 +506,7 @@
        "(1855, 11)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "id": "f578fcfe-5d99-48fd-ae08-9c111c67935e",
    "metadata": {},
    "outputs": [],
@@ -895,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "id": "87c4262c-e989-4ea5-90fa-aa733e5cf450",
    "metadata": {},
    "outputs": [
@@ -911,13 +556,13 @@
       "15\n",
       "16\n",
       "\"bob\":{\n",
-      "\t\"treasure\":\"aarre\", \n",
-      "\t\"thought\":\"aatos\", \n",
-      "\t\"state\":\"afrikkalaisuus\", \n",
-      "\t\"state\":\"agnostisuus\", \n",
-      "\t\"state\":\"agraarisuus\", \n",
-      "\t\"cause\":\"aiheuttaja\", \n",
-      "\t\"time\":\"aika\"\n",
+      "\t\"way\":\"tie\", \n",
+      "\t\"people\":\"kansa\", \n",
+      "\t\"people\":\"rahvas\", \n",
+      "\t\"people\":\"väki\", \n",
+      "\t\"dad\":\"isäukko\", \n",
+      "\t\"dad\":\"iskä\", \n",
+      "\t\"dad\":\"isi\"\n",
       "\t}, \n",
       "\n"
      ]
@@ -929,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 85,
    "id": "7a69a44c-c0eb-4c2e-844e-755d4bf82a96",
    "metadata": {},
    "outputs": [
@@ -3162,179 +2807,34 @@
       "1852\n",
       "1853\n",
       "1854\n",
-      "1855\n",
-      "1856\n",
-      "1857\n",
-      "1858\n",
-      "1859\n",
       "1850\n",
       "1860\n",
       "1860\n",
-      "1861\n",
-      "1862\n",
-      "1863\n",
-      "1864\n",
-      "1865\n",
-      "1866\n",
-      "1867\n",
-      "1868\n",
-      "1869\n",
-      "1860\n",
       "1870\n",
-      "1870\n",
-      "1871\n",
-      "1872\n",
-      "1873\n",
-      "1874\n",
-      "1875\n",
-      "1876\n",
-      "1877\n",
-      "1878\n",
-      "1879\n",
       "1870\n",
       "1880\n",
-      "1880\n",
-      "1881\n",
-      "1882\n",
-      "1883\n",
-      "1884\n",
-      "1885\n",
-      "1886\n",
-      "1887\n",
-      "1888\n",
-      "1889\n",
       "1880\n",
       "1890\n",
-      "1890\n",
-      "1891\n",
-      "1892\n",
-      "1893\n",
-      "1894\n",
-      "1895\n",
-      "1896\n",
-      "1897\n",
-      "1898\n",
-      "1899\n",
       "1890\n",
       "1900\n",
-      "1900\n",
-      "1901\n",
-      "1902\n",
-      "1903\n",
-      "1904\n",
-      "1905\n",
-      "1906\n",
-      "1907\n",
-      "1908\n",
-      "1909\n",
       "1900\n",
       "1910\n",
-      "1910\n",
-      "1911\n",
-      "1912\n",
-      "1913\n",
-      "1914\n",
-      "1915\n",
-      "1916\n",
-      "1917\n",
-      "1918\n",
-      "1919\n",
       "1910\n",
       "1920\n",
-      "1920\n",
-      "1921\n",
-      "1922\n",
-      "1923\n",
-      "1924\n",
-      "1925\n",
-      "1926\n",
-      "1927\n",
-      "1928\n",
-      "1929\n",
       "1920\n",
       "1930\n",
-      "1930\n",
-      "1931\n",
-      "1932\n",
-      "1933\n",
-      "1934\n",
-      "1935\n",
-      "1936\n",
-      "1937\n",
-      "1938\n",
-      "1939\n",
       "1930\n",
       "1940\n",
-      "1940\n",
-      "1941\n",
-      "1942\n",
-      "1943\n",
-      "1944\n",
-      "1945\n",
-      "1946\n",
-      "1947\n",
-      "1948\n",
-      "1949\n",
       "1940\n",
       "1950\n",
-      "1950\n",
-      "1951\n",
-      "1952\n",
-      "1953\n",
-      "1954\n",
-      "1955\n",
-      "1956\n",
-      "1957\n",
-      "1958\n",
-      "1959\n",
       "1950\n",
       "1960\n",
-      "1960\n",
-      "1961\n",
-      "1962\n",
-      "1963\n",
-      "1964\n",
-      "1965\n",
-      "1966\n",
-      "1967\n",
-      "1968\n",
-      "1969\n",
       "1960\n",
       "1970\n",
-      "1970\n",
-      "1971\n",
-      "1972\n",
-      "1973\n",
-      "1974\n",
-      "1975\n",
-      "1976\n",
-      "1977\n",
-      "1978\n",
-      "1979\n",
       "1970\n",
       "1980\n",
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
       "1980\n",
       "1990\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
       "1990\n",
       "2000\n"
      ]
